fix clipped modal buttons

--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -151,7 +151,7 @@
                     //padding-right: calc(1rem + #{$theme_modal_header_height});
 
                     .modal-internal-footer {
-                        margin-right: -$theme_modal_header_height;
+                        //margin-right: -$theme_modal_header_height;
                     }
                 }
             }
